--- a/source/index.html
+++ b/source/index.html
@@ -201,7 +201,7 @@
             height="24">
         </a>
         <ul class="social">
-          <li class="social__item social__item--first">
+          <li class="social__item">
             <a class="social__link" aria-label="Ссылка - Вконтакте" href="https://vk.com">
               <svg class="social__logo social__logo--vk" width="22" height="12">
                 <use xlink:href="img/icons/sprite.svg#vk-logo-big"></use>
@@ -215,7 +215,7 @@
               </svg>
             </a>
           </li>
-          <li class="social__item social__item--last">
+          <li class="social__item">
             <a class="social__link" aria-label="Ссылка - Facebook" href="https://facebook.com">
               <svg class="social__logo social__logo--fb" width="10" height="18">
                 <use xlink:href="img/icons/sprite.svg#fb-logo-big"></use>
